fixed positioning for floating controls

--- a/styles.css
+++ b/styles.css
@@ -20,6 +20,7 @@ body {
 	-webkit-border-radius: 4px;
 	-moz-border-radius: 4px;
 	border-radius: 4px;
+	position: fixed !important;
 }
 
 .control.navigate {
