--- a/styles.css
+++ b/styles.css
@@ -12,9 +12,13 @@ body {
 }
 
 .control.floating {
+	border: 2px solid #444;
+	border-radius: 4px;
 	-webkit-border-radius: 4px;
 	-moz-border-radius: 4px;
-	border-radius: 4px;
+	box-shadow: 0 0 4px #000;
+	-webkit-box-shadow: 0 0 4px #000;
+	-moz-box-shadow: 0 0 4px #000;
 }
 
 .control.navigate {
