--- a/css/styles.css
+++ b/css/styles.css
@@ -10,13 +10,18 @@
 
 .cb-control.floating {
 	margin: 5px;
-	border: 2px solid #444;
-	border-radius: 4px;
 	-webkit-border-radius: 4px;
 	-moz-border-radius: 4px;
-	box-shadow: 0 0 4px #000;
+	border-radius: 4px;
+}
+
+.cb-control.floating,
+#cb-toolbar {
+	border: 2px solid #444;
 	-webkit-box-shadow: 0 0 4px #000;
 	-moz-box-shadow: 0 0 4px #000;
+	box-shadow: 0 0 4px #000;
+	
 }
 
 .cb-control.cb-navigate {
@@ -50,6 +55,9 @@
 	top: 0;
 	height: 25px;
 	opacity: 0;
+	border-top: none;
+	border-left: none;
+	border-right: none;
 }
 
 #cb-toolbar #cb-status {
