--- a/css/styles.css
+++ b/css/styles.css
@@ -21,7 +21,6 @@
 	-webkit-box-shadow: 0 0 4px #000;
 	-moz-box-shadow: 0 0 4px #000;
 	box-shadow: 0 0 4px #000;
-	
 }
 
 .cb-control.cb-navigate {
@@ -29,8 +28,8 @@
 	margin: 0;
 	cursor: pointer;
 	width: 128px;
-	background: center no-repeat;
 	opacity: 0;
+	background: center no-repeat;
 }
 
 .cb-control.cb-navigate:hover {
@@ -54,18 +53,14 @@
 #cb-toolbar {
 	top: 0;
 	height: 25px;
-	opacity: 0;
 	border-top: none;
 	border-left: none;
 	border-right: none;
+	display: none;
 }
 
 #cb-toolbar #cb-status {
 	float: right;
-}
-
-#cb-toolbar:hover {
-	opacity: 1;
 }
 
 #cb-color {
