--- a/css/styles.css
+++ b/css/styles.css
@@ -1,26 +1,22 @@
 
+.cb-control * {
+	font-family: helvetica, arial, sans-serif;
+	font-size: 12px;
+}
+
 .cb-control {
 	color: #fff;
-	font-size: 12px;
 	background-color: #111;
 	padding: 10px;
 	position: fixed !important;
-	opacity: 0.95;
-}
-
-.cb-control.cb-floating {
-	margin: 5px;
-	-webkit-border-radius: 4px;
-	-moz-border-radius: 4px;
-	border-radius: 4px;
-}
-
-.cb-control.cb-floating,
-#cb-toolbar {
-	border: 2px solid #444;
 	-webkit-box-shadow: 0 0 4px #000;
 	-moz-box-shadow: 0 0 4px #000;
 	box-shadow: 0 0 4px #000;
+}
+
+.cb-control label {
+	display: inline-block;
+	margin: 0 0 4px;
 }
 
 .cb-control.cb-navigate {
@@ -46,17 +42,21 @@
 	background-image: url(../img/right.png);
 }
 
+.cb-option {
+	margin-bottom: 16px;
+}
+
+.cb-option:last-child {
+	margin-bottom: 0;
+}
+
 .ui-draggable {
 	cursor: move;
 }
 
 #cb-toolbar {
 	top: 0;
-	line-height: 42px;
-	border-top: none;
-	border-left: none;
-	border-right: none;
-	display: none;
+	border-bottom: 2px solid #444;
 }
 
 #cb-toolbar #cb-status {
@@ -130,6 +130,37 @@
 }
 
 #cb-color {
-	width: 200px;
-	height: 150px;
+	width: 246px;
+	top: 52px;
+	left: 136px;
+	z-index: 1;
+	border: 2px solid #444;
+	border-top: none;
+	-moz-border-radius-bottomleft: 16px;
+	-moz-border-radius-bottomright: 16px;
+	-webkit-border-bottom-left-radius: 16px;
+	-webkit-border-bottom-right-radius: 16px;
+	border-bottom-left-radius: 16px;
+	border-bottom-right-radius: 16px;
+}
+
+label[for="cb-desaturate"] {
+	padding: 4px;
+}
+
+#cb-desaturate {
+	float: left;
+}
+
+#cb-reset {
+	float: right;
+}
+
+#cb-reset {
+	background: transparent url(../img/iconic/white/reload_12x14.png) no-repeat left center;
+	padding-left: 16px;
+	height: 14px;
+	border: none;
+	color: #fff;
+	cursor: pointer;
 }
