--- a/css/styles.css
+++ b/css/styles.css
@@ -57,6 +57,15 @@
 	cursor: move;
 }
 
+#cb-loading-overlay {
+	z-index: 100;
+	opacity: 0.8;
+	background: #000 url("../img/loading.gif") no-repeat center;
+	-webkit-box-shadow: none;
+	-moz-box-shadow: none;
+	box-shadow: none;
+}
+
 #cb-toolbar {
 	top: 0;
 	border-bottom: 2px solid #444;
