disable the strech button if in an auto zoom mode

--- a/css/styles.css
+++ b/css/styles.css
@@ -105,7 +105,8 @@
 	background-position-x: -24px;
 }
 
-#cb-toolbar button.disabled {
+#cb-toolbar button[disabled=disabled] {
+	cursor: auto;
 	background-position-x: -48px;
 }
 
