--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,19 @@
 .cb-control {
 	color: #fff;
 	background-color: #111;
+	background-image: linear-gradient(bottom, rgb(17,17,17) 20%, rgb(41,41,41) 72%);
+	background-image: -o-linear-gradient(bottom, rgb(17,17,17) 20%, rgb(41,41,41) 72%);
+	background-image: -moz-linear-gradient(bottom, rgb(17,17,17) 20%, rgb(41,41,41) 72%);
+	background-image: -webkit-linear-gradient(bottom, rgb(17,17,17) 20%, rgb(41,41,41) 72%);
+	background-image: -ms-linear-gradient(bottom, rgb(17,17,17) 20%, rgb(41,41,41) 72%);
+
+	background-image: -webkit-gradient(
+		linear,
+		left bottom,
+		left top,
+		color-stop(0.2, rgb(17,17,17)),
+		color-stop(0.72, rgb(41,41,41))
+	);
 	padding: 10px;
 	position: fixed !important;
 	-webkit-box-shadow: 0 0 4px #000;
@@ -94,7 +107,7 @@
 
 #cb-toolbar {
 	top: 0;
-	border-bottom: 2px solid #444;
+	border-bottom: 1px solid #888;
 }
 
 #cb-toolbar button {
