--- a/templates/navigateLeft.handlebars
+++ b/templates/navigateLeft.handlebars
@@ -1,2 +1,4 @@
 
-<div data-trigger="click" data-action="drawPrevPage" class="cb-control navigate navigate-left"></div>
+<div data-trigger="click" data-action="drawPrevPage" class="cb-control navigate navigate-left ">
+	<span class="icon-arrow-left"></span>
+</div>
