--- a/templates/toolbar.handlebars
+++ b/templates/toolbar.handlebars
@@ -2,12 +2,12 @@
 <div class="toolbar">
 
 	<ul class="pull-left">
-		<li>
+		<li class="close">
 			<button data-trigger="click" data-action="close" title="close" class="icon-remove-sign"></button>
 		</li>
-		<li class="separator"></li>
+		<li class="close separator"></li>
 		<li>
-			<button title="image settings" class="icon-settings"></button>
+			<button title="image settings" class="icon-settings" data-toggle="dropdown"></button>
 			<div class="dropdown">
 				<form name="image-enhancements" data-trigger="reset" data-action="resetEnhancements">
 					<div class="sliders">
