--- a/css/styles.css
+++ b/css/styles.css
@@ -74,3 +74,9 @@ body:not(.mobile) .navigate:hover {
 	background: #86C441;
 	border-color: #3E7600;
 }
+
+* {
+	-webkit-user-select: none;
+	-webkit-touch-callout: none;
+	-webkit-tap-highlight-color: rgba(0,0,0,0);
+}
