fixed manga mode

--- a/templates/navigateLeft.handlebars
+++ b/templates/navigateLeft.handlebars
@@ -1,4 +1,4 @@
 
-<div data-trigger="click" data-action="drawPrevPage" class="cb-control navigate navigate-left ">
+<div data-trigger="click" data-action="navigation" data-navigate-side="left" class="cb-control navigate navigate-left ">
 	<span class="icon-arrow-left"></span>
 </div>
