--- a/templates/navigateRight.handlebars
+++ b/templates/navigateRight.handlebars
@@ -1,4 +1,4 @@
 
-<div data-trigger="click" data-action="drawNextPage" class="cb-control navigate navigate-right">
+<div data-trigger="click" data-action="navigation" data-navigate-side="right" class="cb-control navigate navigate-right">
 	<span class="icon-arrow-right"></span>
 </div>
