manga mode toolbar button

--- a/templates/toolbar.handlebars
+++ b/templates/toolbar.handlebars
@@ -46,6 +46,10 @@
 		<li>
 			<button data-trigger="click" data-action="fitWidth" title="fit page to window width" class="icon-expand"></button>
 		</li>
+		<li>
+			<button data-trigger="click" data-action="toggleReadingMode" title="switch reading direction" class="icon-arrow-right-3 manga-false"></button>
+			<button data-trigger="click" data-action="toggleReadingMode" title="switch reading direction" class="icon-arrow-left-3 manga-true"></button>
+		</li>
 	</ul>
 
 	<ul class="pull-right">
