a little less toolbar button padding on mobile the toolbar overflows a little when in portrait mode on smaller phones.

--- a/css/toolbar.css
+++ b/css/toolbar.css
@@ -64,6 +64,10 @@ button, input, label {
 	padding: 0 12px;
 }
 
+.mobile .toolbar li > button {
+	padding: 0 9px;
+}
+
 .toolbar li > button:hover {
 	color: #8CC746;
 }
