--- a/templates/toolbar.handlebars
+++ b/templates/toolbar.handlebars
@@ -35,7 +35,8 @@
 			</div>
 		</li>
 		<li>
-			<button data-trigger="click" data-action="toggleLayout" title="toggle one/two pages at a time" class="icon-file"></button>
+			<button data-trigger="click" data-action="toggleLayout" title="toggle one/two pages at a time" class="icon-file layout layout-single"></button>
+			<button data-trigger="click" data-action="toggleLayout" title="toggle one/two pages at a time" class="icon-copy layout layout-double"></button>
 		</li>
 		<li>
 			<button data-trigger="click" data-action="zoomOut" title="zoom out" class="icon-zoom-out"></button>
