--- a/templates/toolbar.handlebars
+++ b/templates/toolbar.handlebars
@@ -48,6 +48,9 @@
 			<button data-trigger="click" data-action="fitWidth" title="fit page to window width" class="icon-expand"></button>
 		</li>
 		<li>
+			<button data-trigger="click" data-action="fitWindow" title="fit page to window" class="icon-expand-2"></button>
+		</li>
+		<li>
 			<button data-trigger="click" data-action="toggleReadingMode" title="switch reading direction" class="icon-arrow-right-3 manga-false"></button>
 			<button data-trigger="click" data-action="toggleReadingMode" title="switch reading direction" class="icon-arrow-left-3 manga-true"></button>
 		</li>
