adding toolbar button for thumbnail browser

--- a/templates/toolbar.handlebars
+++ b/templates/toolbar.handlebars
@@ -35,6 +35,9 @@
 			</div>
 		</li>
 		<li>
+			<button data-trigger="click" data-action="toggleThumbnails" title="show thumbnails" class="icon-th"></button>
+		</li>
+		<li>
 			<button data-trigger="click" data-action="toggleLayout" title="toggle one/two pages at a time" class="icon-file layout layout-single"></button>
 			<button data-trigger="click" data-action="toggleLayout" title="toggle one/two pages at a time" class="icon-copy layout layout-double"></button>
 		</li>
