--- a/fonts/icomoon-toolbar/style.css
+++ b/fonts/icomoon-toolbar/style.css
@@ -2,32 +2,14 @@
 	font-family: 'toolbar';
 	src:url('fonts/toolbar.eot');
 	src:url('fonts/toolbar.eot?#iefix') format('embedded-opentype'),
-		url('fonts/toolbar.woff') format('woff'),
 		url('fonts/toolbar.ttf') format('truetype'),
+		url('fonts/toolbar.woff') format('woff'),
 		url('fonts/toolbar.svg#toolbar') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
 
-/* Use the following CSS code if you want to use data attributes for inserting your icons */
-[data-icon]:before {
-	font-family: 'toolbar';
-	content: attr(data-icon);
-	speak: none;
-	font-weight: normal;
-	font-variant: normal;
-	text-transform: none;
-	line-height: 1;
-	-webkit-font-smoothing: antialiased;
-}
-
-/* Use the following CSS code if you want to have a class per icon */
-/*
-Instead of a list of all class selectors,
-you can use the generic selector below, but it's slower:
-[class*="icon-"] {
-*/
-.icon-file, .icon-image, .icon-zoom-out, .icon-zoom-in, .icon-expand, .icon-expand-2, .icon-folder-open, .icon-folder, .icon-cog, .icon-menu, .icon-wrench, .icon-settings, .icon-loop, .icon-pin, .icon-first, .icon-last, .icon-arrow-left, .icon-arrow-right, .icon-arrow-left-2, .icon-arrow-right-2, .icon-arrow-left-3, .icon-arrow-right-3, .icon-previous, .icon-next, .icon-droplet, .icon-adjust, .icon-sun, .icon-remove-sign, .icon-remove, .icon-copy {
+[class^="icon-"], [class*=" icon-"] {
 	font-family: 'toolbar';
 	speak: none;
 	font-style: normal;
@@ -35,7 +17,17 @@ you can use the generic selector below, but it's slower:
 	font-variant: normal;
 	text-transform: none;
 	line-height: 1;
+
+	/* Better Font Rendering =========== */
 	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+}
+
+.icon-thumbnails:before {
+	content: "\e600";
+}
+.icon-uniF000:before {
+	content: "\f000";
 }
 .icon-file:before {
 	content: "\e000";
@@ -52,7 +44,7 @@ you can use the generic selector below, but it's slower:
 .icon-expand:before {
 	content: "\e004";
 }
-.icon-expand-2:before {
+.icon-expand2:before {
 	content: "\e005";
 }
 .icon-folder-open:before {
@@ -91,16 +83,16 @@ you can use the generic selector below, but it's slower:
 .icon-arrow-right:before {
 	content: "\e010";
 }
-.icon-arrow-left-2:before {
+.icon-arrow-left2:before {
 	content: "\e012";
 }
-.icon-arrow-right-2:before {
+.icon-arrow-right2:before {
 	content: "\e013";
 }
-.icon-arrow-left-3:before {
+.icon-arrow-left3:before {
 	content: "\e014";
 }
-.icon-arrow-right-3:before {
+.icon-arrow-right3:before {
 	content: "\e015";
 }
 .icon-previous:before {
@@ -126,4 +118,7 @@ you can use the generic selector below, but it's slower:
 }
 .icon-copy:before {
 	content: "\e037";
+}
+.icon-th:before {
+	content: "\e603";
 }
